resources/sass/_education.scss
/* Education section */
#education {
  grid-area: education;
  display: grid;
  grid-column-gap: 10%;
  grid-template-columns: 45% 45%;

  background: $white;

  @include media-breakpoint-down(xs) {
    grid-template-columns: 100%;
  }

  @include media-breakpoint-up(sm) {
    .heading {
      grid-column: 1 / span 2;
    }
  }

  .box {
    justify-self: right;

    max-width: 350px;
    text-align: center;

    &:nth-child(2n+1) {
      justify-self: left;
    }

    @include media-breakpoint-down(xs) {
      justify-self: center !important;
      margin-bottom: 40px;

      &:last-of-type {
        margin-bottom: 0;
      }
    }

    header {
      margin: 0 auto 35px;
      background: _palette(main-blue);
      color: $white;

      @include media-breakpoint-down(xs) {
          margin-bottom: 20px;
      }

      span {
        padding:10px 5px;
        display: block;
      }

      h4 {
        padding: 10px 5px;
        background: _palette(dark-blue);
      }
    }

    .degree {
      background: _palette(main-yellow);
      padding: 20px 5px 15px;
      text-transform: uppercase;
      font-size: 0.9rem;
      line-height: 1.8;
      position: relative;

      &:before {
        content: '';
        position: absolute;
        top: -40px;
        left: 50%;
        width: 0;
        height: 0;
        border: 20px solid _palette(main-yellow);
        border-color: transparent transparent _palette(main-yellow);
        margin: 0 0 0 -20px;
      }
    }
  }
}

